# aries

./: Cargo.toml  README.md  build.rs  geminiclient.c  simple_openssl_client.c
src/: aries_art.rs  aries_logo.rs  gemini.rs  geminiclient.c  main.rs  ui.rs
