[package]
name = "aries"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-widgets = "0.3.0"
openssl = { version = "0.10", features = ["vendored"] }
tui-input = "0.15.0"
tui-scrollview = "0.6.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
